Setting up time zone support. This is a working build, but there are errors on the API side that require attention before we can push it.

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@
 .externalURL {
     cursor: pointer;
 }
+.cog {
+    float: right;
+    font-size: 18px;
+}
 
 @media (max-width: 333px) {
 .smokeIcon {
