Added in the Tappecue Cruise Control
Added Cruise Control support.

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@
     background-color: #858585;
     color: #FFFFFF;
 }
+.probe-fan {
+    background-color: #B27800;
+    color: #FFFFFF;
+}
 .btn-inactive {
     background-color: #858585;
     color: #FFFFFF;
